--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -291,6 +291,7 @@
   "Cancel transaction": "Cancel transaction",
   "Submitted on": "Submitted on",
   "Queued": "Queued",
+  "Failed": "Failed",
   "New rate": "New rate",
   "Rate": "Rate",
   "Fetching price...": "Fetching price...",
@@ -358,7 +359,7 @@
   "Search tokens and wallets": "Search tokens and wallets",
   "NFTs": "NFTs",
   "Activity": "Activity",
-  "Start fresh with a new recovery phrase": "Start fresh with a new recovery phrase",
+  "Start with a new recovery phrase": "Start with a new recovery phrase",
   "Import an existing wallet": "Import an existing wallet",
   "Enter your recovery phrase": "Enter your recovery phrase",
   "Explore the contents of any wallet": "Explore the contents of any wallet",
